--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -119,6 +119,7 @@ felix.auto.start.60= \
  reference:file:sc-bundles/chatalerter.jar \
  reference:file:sc-bundles/shutdown.jar \
  reference:file:sc-bundles/statusupdate.jar \
+ reference:file:sc-bundles/generalconfig.jar \
  reference:file:sc-bundles/dictaccregwizz.jar
  
 # Uncomment the following lines if you want to run the architect viewer
