Implement option for auto start on windows
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3748 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -1710,6 +1710,7 @@ javax.swing.event, javax.swing.border"/>
                 prefix="resources/images/plugin/generalconfig"/>
             <zipfileset dir="${resources}" includes="application.properties"
                 prefix="resources"/>
+            <zipfileset src="${lib.noinst}/izpack-shortcut-link.jar" prefix=""/>
         </jar>
     </target>
 </project>
