Changing of Dock Icon according to global status and changing systray changing to avoid errors if icons are missing.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3780 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -1380,6 +1380,7 @@ javax.swing.event, javax.swing.border"/>
                 prefix="resources"/>
             <zipfileset dir="${resources}/languages/impl/systray"
                 prefix="resources/languages/impl/systray"/>
+            <zipfileset src="${lib.mac.noinst}/dock.jar" prefix=""/>
         </jar>
     </target>
 
