--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -37,6 +37,7 @@ org.osgi.framework.system.packages= org.osgi.framework; ; version=1.3.0, \
  org.jdesktop.jdic.desktop; \
  com.apple.eio; \
  com.apple.cocoa.application; \
+ com.apple.cocoa.foundation; \
  org.xml.sax.helpers; \
  javax.crypto; \
  javax.crypto.spec; \
