--- a/src/net/java/sip/communicator/impl/gui/utils/images.properties
+++ b/src/net/java/sip/communicator/impl/gui/utils/images.properties
@@ -100,18 +100,18 @@ TOOLBAR_DRAG_ICON=resources/images/impl/gui/common/toolbarDragIcon.png
 ADD_GROUP_ICON=resources/images/impl/gui/common/addGroup.png
 MOVE_CONTACT=resources/images/impl/gui/common/moveContact.png
 
-SMILEY1=resources/images/impl/gui/common/smilies/default/smiley1.gif
-SMILEY2=resources/images/impl/gui/common/smilies/default/smiley2.gif
-SMILEY3=resources/images/impl/gui/common/smilies/default/smiley3.gif
-SMILEY4=resources/images/impl/gui/common/smilies/default/smiley4.gif
-SMILEY5=resources/images/impl/gui/common/smilies/default/smiley5.gif
-SMILEY6=resources/images/impl/gui/common/smilies/default/smiley6.gif
-SMILEY7=resources/images/impl/gui/common/smilies/default/smiley7.gif
-SMILEY8=resources/images/impl/gui/common/smilies/default/smiley8.gif
-SMILEY9=resources/images/impl/gui/common/smilies/default/smiley9.gif
-SMILEY10=resources/images/impl/gui/common/smilies/default/smiley10.gif
-SMILEY11=resources/images/impl/gui/common/smilies/default/smiley11.gif
-SMILEY12=resources/images/impl/gui/common/smilies/default/smiley12.gif
+SMILEY1=resources/images/impl/gui/common/smilies/default/smiley1.png
+SMILEY2=resources/images/impl/gui/common/smilies/default/smiley2.png
+SMILEY3=resources/images/impl/gui/common/smilies/default/smiley3.png
+SMILEY4=resources/images/impl/gui/common/smilies/default/smiley4.png
+SMILEY5=resources/images/impl/gui/common/smilies/default/smiley5.png
+SMILEY6=resources/images/impl/gui/common/smilies/default/smiley6.png
+SMILEY7=resources/images/impl/gui/common/smilies/default/smiley7.png
+SMILEY8=resources/images/impl/gui/common/smilies/default/smiley8.png
+SMILEY9=resources/images/impl/gui/common/smilies/default/smiley9.png
+SMILEY10=resources/images/impl/gui/common/smilies/default/smiley10.png
+SMILEY11=resources/images/impl/gui/common/smilies/default/smiley11.png
+SMILEY12=resources/images/impl/gui/common/smilies/default/smiley12.png
 
 AUTH_WINDOW_BACKGROUND=resources/images/impl/gui/common/passWindowBackground.png
 
