--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -90,7 +90,8 @@ felix.auto.start.60= \
  reference:file:sc-bundles/msghistory.jar \
  reference:file:sc-bundles/callhistory.jar \
  reference:file:sc-bundles/audionotifier.jar \
- reference:file:sc-bundles/notification.jar
+ reference:file:sc-bundles/notification.jar \
+ reference:file:sc-bundles/notificationconfig.jar
 
 
  felix.auto.start.66= \
