--- a/src/net/java/sip/communicator/plugin/notificationconfiguration/resources.properties
+++ b/src/net/java/sip/communicator/plugin/notificationconfiguration/resources.properties
@@ -7,6 +7,7 @@ turnoffall=Turn Off All
 actions=Actions
 quickcontrols=Quick Controls
 apply=Apply
+restore=Restore Defaults
 playsound=Play a sound :
 execprog=Execute a program :
 displaypopup=Show a message in a pop-up window
