Adding a GoogleTalk Wizard (Contributed by Lubomir Marinov)
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3921 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -90,9 +90,7 @@ felix.auto.start.60= \
  reference:file:sc-bundles/msghistory.jar \
  reference:file:sc-bundles/callhistory.jar \
  reference:file:sc-bundles/audionotifier.jar \
- reference:file:sc-bundles/notification.jar \
- reference:file:sc-bundles/notificationconfig.jar
-
+ reference:file:sc-bundles/notification.jar
 
  felix.auto.start.66= \
  reference:file:sc-bundles/swing-ui.jar \
@@ -106,6 +104,7 @@ felix.auto.start.60= \
  reference:file:sc-bundles/aimaccregwizz.jar \
  reference:file:sc-bundles/sipaccregwizz.jar \
  reference:file:sc-bundles/jabberaccregwizz.jar \
+ reference:file:sc-bundles/googletalkaccregwizz.jar \
  reference:file:sc-bundles/msnaccregwizz.jar \
  reference:file:sc-bundles/yahooaccregwizz.jar \
  reference:file:sc-bundles/gibberishaccregwizz.jar \
@@ -116,6 +115,7 @@ felix.auto.start.60= \
  reference:file:sc-bundles/ircaccregwizz.jar \
  reference:file:sc-bundles/simpleaccreg.jar \
  reference:file:sc-bundles/contacteventhandler.jar \
+ reference:file:sc-bundles/notificationconfig.jar \
  reference:file:sc-bundles/contactinfo.jar \
  reference:file:sc-bundles/accountinfo.jar \
  reference:file:sc-bundles/chatalerter.jar \
