Add the swing packages to the unit testing felix system packages
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3947 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -9,6 +9,7 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  javax.swing.border; \
  javax.swing.table; \
  javax.swing.text; \
+ javax.swing.text.html; \
  javax.imageio;\
  org.w3c.dom; \
  org.xml.sax; \
