Fixing test build and include starting resource bundles in client.run.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3969 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -57,6 +57,8 @@ felix.auto.start.3= \
 
 felix.auto.start.4= \
  file:sc-bundles/configuration.jar \
+ reference:file:sc-bundles/resourcemanager.jar \
+ reference:file:sc-bundles/defaultresources.jar \
  reference:file:sc-bundles/version.jar \
  reference:file:sc-bundles/version-impl.jar \
  file:sc-bundles/netaddr.jar
