--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -61,9 +61,14 @@ felix.auto.start.30= \
 
 felix.auto.start.40= \
  reference:file:sc-bundles/configuration.jar \
- reference:file:sc-bundles/version.jar \
+ reference:file:sc-bundles/resourcemanager.jar \
+ reference:file:sc-bundles/defaultresources.jar
+
+felix.auto.start.45= \
+reference:file:sc-bundles/version.jar \
  reference:file:sc-bundles/version-impl.jar \
  reference:file:sc-bundles/branding.jar \
+ reference:file:sc-bundles/guicustomizer.jar
 
 felix.auto.start.50= \
  reference:file:sc-bundles/browserlauncher.jar \
