Remove configuration defaults now if values are missing in configuration service they are get from resource settings , but are always saved through configuration service.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3973 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/config/defaults.properties
+++ b/resources/config/defaults.properties
@@ -1,3 +1,11 @@
+net.java.sip.communicator.impl.msghistory.isMessageHistoryEnabled=true
+net.java.sip.communicator.impl.gui.autoPopupNewMessage=false
+net.java.sip.communicator.impl.gui.sendMessageCommand=Enter
+net.java.sip.communicator.impl.gui.sendTypingNotifications=true
+net.java.sip.communicator.impl.gui.isMultiChatWindowEnabled=true
+net.java.sip.communicator.impl.gui.isMessageHistoryShown=true
+net.java.sip.communicator.impl.gui.messageHistorySize=10
+
 applicationName=SIP Communicator
 applicationWebSite=http://sip-communicator.org
 fontName=Verdana
