--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -67,8 +67,7 @@ felix.auto.start.40= \
 felix.auto.start.45= \
 reference:file:sc-bundles/version.jar \
  reference:file:sc-bundles/version-impl.jar \
- reference:file:sc-bundles/branding.jar \
- reference:file:sc-bundles/guicustomizer.jar
+ reference:file:sc-bundles/branding.jar
 
 felix.auto.start.50= \
  reference:file:sc-bundles/browserlauncher.jar \
