- Copy problem fixed in chat write area. - Long text formatting fixed - Smilies are now moved to the formatting tool bar.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3978 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -41,7 +41,8 @@ org.osgi.framework.system.packages= org.osgi.framework; ; version=1.3.0, \
  org.xml.sax.helpers; \
  javax.crypto; \
  javax.crypto.spec; \
- javax.crypto.interfaces;
+ javax.crypto.interfaces; \
+ say.swing;
 
 felix.auto.start.10= reference:file:lib/bundle/org.apache.felix.bundlerepository-1.0.0.jar \
  reference:file:lib/bundle/org.apache.felix.servicebinder-0.9.0-SNAPSHOT.jar
