--- a/build.xml
+++ b/build.xml
@@ -622,7 +622,7 @@
         bundle-ssh,bundle-plugin-sshaccregwizz,
         bundle-contacteventhandler,bundle-plugin-contactinfo,
         bundle-plugin-accountinfo,bundle-plugin-chatalerter,
-        bundle-plugin-statusupdate,
+        bundle-plugin-statusupdate,bundle-jfontchooserlib,
         bundle-updatecheckplugin,
         bundle-dict,bundle-plugin-dictaccregwizz,
         bundle-plugin-simpleaccreg,bundle-plugin-generalconfig,
@@ -1610,6 +1610,15 @@ javax.swing.event, javax.swing.border"/>
             manifest="${src}/net/java/sip/communicator/plugin/notificationconfiguration/notificationconfiguration.manifest.mf">
             <zipfileset dir="${dest}/net/java/sip/communicator/plugin/notificationconfiguration"
                 prefix="net/java/sip/communicator/plugin/notificationconfiguration"/>
+        </jar>
+	</target>
+
+
+    <target name="bundle-jfontchooserlib">
+        <!-- Creates a bundle containing the jfontchooser lib.-->
+        <jar compress="false" destfile="${bundles.dest}/jfontchooserlib.jar"
+            manifest="${lib.noinst}/jfontchooser.manifest.mf">
+			<zipfileset src="${lib.noinst}/jfontchooser-1.0.5.jar" prefix=""/>
         </jar>
     </target>
 </project>
