--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -41,8 +41,7 @@ org.osgi.framework.system.packages= org.osgi.framework; ; version=1.3.0, \
  org.xml.sax.helpers; \
  javax.crypto; \
  javax.crypto.spec; \
- javax.crypto.interfaces; \
- say.swing;
+ javax.crypto.interfaces;
 
 felix.auto.start.10= reference:file:lib/bundle/org.apache.felix.bundlerepository-1.0.0.jar \
  reference:file:lib/bundle/org.apache.felix.servicebinder-0.9.0-SNAPSHOT.jar
@@ -63,6 +62,7 @@ felix.auto.start.30= \
 felix.auto.start.40= \
  reference:file:sc-bundles/configuration.jar \
  reference:file:sc-bundles/resourcemanager.jar \
+ reference:file:sc-bundles/jfontchooserlib.jar \
  reference:file:sc-bundles/defaultresources.jar
 
 felix.auto.start.45= \
