Moving the AutoAway configuration to the general configuration form. (Patch by Damien Roth). Improved the text of Exception messages in OpSetBasicTelephonySipImpl Cosmetic fixes in the media package Reduced default logging level
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4000 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/logging.properties
+++ b/lib/logging.properties
@@ -57,25 +57,26 @@ java.util.logging.ConsoleHandler.formatter = net.java.sip.communicator.util.ScLo
 # We don't want trace logs from joscar and joustsim
 net.kano.level = INFO
 
-ymsg.network.level = FINEST
+ymsg.network.level = INFO
 
 # We don't want trace logs from java-jml
 net.sf.cindy.impl.level = INFO
 
 # But we want everything coming from the sip-comm
 net.java.sip.communicator.impl.level = INFO
-net.java.sip.communicator.impl.protocol.level = FINEST
-net.java.sip.communicator.impl.shutdown.level = FINEST
-net.java.sip.communicator.impl.contactlist.level = FINEST
-net.java.sip.communicator.slick.level = FINEST
-net.java.sip.communicator.impl.level = FINEST
-net.java.sip.communicator.service.level = FINEST
-net.java.sip.communicator.util.level = FINEST
-net.java.sip.communicator.service.configuration.level = FINEST
-net.java.sip.communicator.impl.configuration.level = FINEST
+net.java.sip.communicator.impl.protocol.level = INFO
+net.java.sip.communicator.impl.shutdown.level = INFO
+net.java.sip.communicator.impl.contactlist.level = INFO
+net.java.sip.communicator.slick.level = INFO
+net.java.sip.communicator.impl.level = INFO
+net.java.sip.communicator.service.level = INFO
+net.java.sip.communicator.util.level = INFO
+net.java.sip.communicator.service.configuration.level = INFO
+net.java.sip.communicator.impl.configuration.level = INFO
 net.java.sip.communicator.impl.history.level = INFO
 net.java.sip.communicator.impl.gui.level = INFO
-net.java.sip.communicator.impl.protocol.zeroconf.jmdns.level=INFO
+net.java.sip.communicator.impl.protocol.zeroconf.jmdns.level = WARN
+net.java.sip.communicator.impl.media.level = WARN
 
 # For example, set the com.xyz.foo logger to only log SEVERE
 # messages:
