Added some missing resources to the images.properties file
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4011 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/images/images.properties
+++ b/resources/images/images.properties
@@ -213,10 +213,22 @@ pageImageDict=resources/images/protocol/dict/dict-64x64.png
 # icq accregwiz
 protocolIconIcq=resources/images/protocol/icq/icq16x16-online.png
 pageImageIcq=resources/images/protocol/icq/icq64x64.png
+icqConnectingIcon=resources/images/protocol/icq/cr16-action-icq_connecting-1.gif
+icqFfcIcon=resources/images/protocol/icq/icq16x16-ffc.png
+icqInvisibleIcon=resources/images/protocol/icq/icq16x16-invisible.png
+icqAwayIcon=resources/images/protocol/icq/icq16x16-away.png
+icqNaIcon=resources/images/protocol/icq/icq16x16-na.png
+icqDndIcon=resources/images/protocol/icq/icq16x16-dnd.png
+icqOccupiedIcon=resources/images/protocol/icq/icq16x16-occupied.png
+icqOfflineIcon=resources/images/protocol/icq/icq16x16-offline.png
 
 # zeroconf accregwizz
 protocolIconZeroconf=resources/images/protocol/zeroconf/zeroconf-color-16.png
 pageImageZeroconf=resources/images/protocol/zeroconf/zeroconf-color-64.png
+zeroconfOnlineIcon=resources/images/protocol/zeroconf/zeroconf-online.png
+zeroconfOfflineIcon=resources/images/protocol/zeroconf/zeroconf-offline.png
+zeroconfDndIcon=resources/images/protocol/zeroconf/zeroconf-dnd.png
+zeroconfInvisibleIcon=resources/images/protocol/zeroconf/zeroconf-invisible.png
 
 # branding
 aboutWindowBg=resources/images/plugin/branding/aboutWindowBackground.png
@@ -225,6 +237,15 @@ splashScreenBg=resources/images/plugin/branding/splashScreenBackground.png
 # yahoo accregwizz
 protocolIconYahoo=resources/images/protocol/yahoo/yahoo16x16.png
 pageImageYahoo=resources/images/protocol/yahoo/yahoo64x64.png
+yahooConnectingIcon=resources/images/protocol/yahoo/yahoo16x16-connecting.gif
+yahooOnlineIcon=resources/images/protocol/yahoo/yahoo16x16-online.png
+yahooIdleIcon=resources/images/protocol/yahoo/yahoo16x16-idle.png
+yahooInvisibleIcon=resources/images/protocol/yahoo/yahoo16x16-invisible.png
+yahooAwayIcon=resources/images/protocol/yahoo/yahoo16x16-away.png
+yahooLunchIcon=resources/images/protocol/yahoo/yahoo16x16-lunch.png
+yahooNaIcon=resources/images/protocol/yahoo/yahoo16x16-na.png
+yahooPhoneIcon=resources/images/protocol/yahoo/yahoo16x16-phone.png
+yahooVacationIcon=resources/images/protocol/yahoo/yahoo16x16-vacation.png
 
 # accountinfo
 accountInfoIcon=resources/images/plugin/accountinfo/userInfo16x16.png
@@ -233,6 +254,11 @@ accountInfoDefaultPersonIcon=resources/images/plugin/accountinfo/personPhoto.png
 # ssh accregwizz
 protocolIconSsh=resources/images/protocol/ssh/ssh-online.png
 pageImageSsh=resources/images/protocol/ssh/ssh64x64.png
+sshOfflineIcon=resources/images/protocol/ssh/ssh-offline.png
+sshNaIcon=resources/images/protocol/ssh/ssh-na.png
+sshConnectingIcon=resources/images/protocol/ssh/ssh-connecting.png
+sshConnectedIcon=resources/images/protocol/ssh/ssh-connected.png
+sshFileTransferIcon=resources/images/protocol/ssh/ssh-filetransfer.png
 
 # general config
 pluginIconGeneralConfig=resources/images/plugin/generalconfig/configureIcon.png
@@ -240,6 +266,16 @@ pluginIconGeneralConfig=resources/images/plugin/generalconfig/configureIcon.png
 #msn accregwizz
 protocolIconMsn=resources/images/protocol/msn/msn16x16.png
 pageImageMsn=resources/images/protocol/msn/msn64x64.png
+msnConnectingIcon=resources/images/protocol/msn/msn16x16-connecting.gif
+msnOnlineIcon=resources/images/protocol/msn/msn16x16-online.png
+msnNaIcon=resources/images/protocol/msn/msn16x16-na.png
+msnInvisibleIcon=resources/images/protocol/msn/msn16x16-invisible.png
+msnAwayIcon=resources/images/protocol/msn/msn16x16-away.png
+msnLunchIcon=resources/images/protocol/msn/msn16x16-lunch.png
+msnPhoneIcon=resources/images/protocol/msn/msn16x16-phone.png
+msnBrbIcon=resources/images/protocol/msn/msn16x16-brb.png
+msnBusyIcon=resources/images/protocol/msn/msn16x16-busy.png
+msnOfflineIcon=resources/images/protocol/msn/msn16x16-offline.png
 
 # mailbox
 mailboxIcon=resources/images/tape.png
@@ -296,13 +332,33 @@ textIcon=resources/images/plugin/whiteboard/text.png
 text2Icon=resources/images/plugin/whiteboard/text2.png
 inviteIcon=resources/images/plugin/whiteboard/inviteDialogIcon.png
 
+# dict status enum
+dictProtocolIcon=resources/images/protocol/dict/dict-16x16.png
+dict64x64Icon=resources/images/protocol/dict/dict-64x64.png
+
+# gibberish status enum
+gibberish64x64Icon=resources/images/protocol/gibberish/gibberish64x64.png
+gibberishOfflineIcon=resources/images/protocol/gibberish/gibberish-offline.png
+gibberishOccupiedIcon=resources/images/protocol/gibberish/gibberish-occupied.png
+gibberishDndIcon=resources/images/protocol/gibberish/gibberish-dnd.png
+gibberishNaIcon=resources/images/protocol/gibberish/gibberish-na.png
+gibberishAwayIcon=resources/images/protocol/gibberish/gibberish-away.png
+gibberishInvisibleIcon=resources/images/protocol/gibberish/gibberish-invisible.png
+gibberishOnlineIcon=resources/images/protocol/gibberish/gibberish-online.png
+gibberishFfcIcon=resources/images/protocol/gibberish/gibberish-ffc.png
+
 # rss accregwizz
 protocolIconRss=resources/images/protocol/rss/rss-online.png
 pageImageRss=resources/images/protocol/rss/rss64x64.png
+rssOfflineIcon=resources/images/protocol/rss/rss-offline.png
 
 # aim accregwizz
 protocolIconAim=resources/images/protocol/aim/aim16x16-online.png
+aimInvisibleIcon=resources/images/protocol/aim/aim16x16-invisible.png
+aimAwayIcon=resources/images/protocol/aim/aim16x16-away.png
+aimOfflineIcon=resources/images/protocol/aim/aim16x16-offline.png
 pageImageAim=resources/images/protocol/aim/aim64x64.png
+aimConnectingIcon=resources/images/protocol/aim/cr16-action-aim_connecting.gif
 
 # contactinfo
 contactInfoIcon=resources/images/plugin/contactinfo/userInfo16x16.png
@@ -311,11 +367,27 @@ contactInfoDefaultPersonIcon=resources/images/plugin/contactinfo/personPhoto.png
 # irc accregwizz
 protocolIconIrc=resources/images/protocol/irc/cr16-action-irc_online.png
 pageImageIrc=resources/images/protocol/irc/cr64-app-irc_protocol.png
+ircOfflineIcon=resources/images/protocol/irc/cr16-action-irc_offline.png
+ircAwayIcon=resources/images/protocol/gibberish/gibberish-away.png
+ircConnectingIcon=resources/images/protocol/irc/cr16-action-irc_connecting-1.gif
+irc64x64Icon=resources/images/protocol/irc/cr32-app-irc_protocol.png
 
 # jabber accregwizz 
 protocolIconJabber=resources/images/protocol/jabber/status16x16-online.png
 pageImageJabber=resources/images/protocol/jabber/logo48x48.png
+jabberConnectingIcon=resources/images/protocol/jabber/status16x16-connecting.gif
+jabberOfflineIcon=resources/images/protocol/jabber/status16x16-offline.png
+jabberDndIcon=resources/images/protocol/jabber/status16x16-dnd.png
+jabberAwayIcon=resources/images/protocol/jabber/status16x16-away.png
+jabberFfcIcon=resources/images/protocol/jabber/status16x16-ffc.png
+jabberXaIcon=resources/images/protocol/jabber/status16x16-xa.png
 
-#googletalkaccregwizz
-protocolIcon=resources/images/protocol/googletalk/status16x16-online.png
-pageImage=resources/images/protocol/googletalk/logo48x48.png
+# googletalk accregwizz
+googletalkProtocolIcon=resources/images/protocol/googletalk/status16x16-online.png
+googletalkPageImage=resources/images/protocol/googletalk/logo48x48.png
+googletalkConnectingIcon=resources/images/protocol/googletalk/status16x16-connecting.gif
+googletalkOfflineIcon=resources/images/protocol/googletalk/status16x16-offline.png
+googletalkDndIcon=resources/images/protocol/googletalk/status16x16-dnd.png
+googletalkAwayIcon=resources/images/protocol/googletalk/status16x16-away.png
+googletalkFfcIcon=resources/images/protocol/googletalk/status16x16-ffc.png
+googletalkXaIcon=resources/images/protocol/googletalk/status16x16-xa.png
