KeyBinding plugin contributed by Damian Johnson.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4013 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -95,6 +95,7 @@ felix.auto.start.60= \
  reference:file:sc-bundles/msghistory.jar \
  reference:file:sc-bundles/callhistory.jar \
  reference:file:sc-bundles/audionotifier.jar \
+ reference:file:sc-bundles/keybindings.jar \
  reference:file:sc-bundles/notification.jar
 
  felix.auto.start.66= \
@@ -126,6 +127,7 @@ felix.auto.start.60= \
  reference:file:sc-bundles/chatalerter.jar \
  reference:file:sc-bundles/shutdown.jar \
  reference:file:sc-bundles/statusupdate.jar \
+ reference:file:sc-bundles/keybindingChooser.jar \
  reference:file:sc-bundles/generalconfig.jar \
  reference:file:sc-bundles/dictaccregwizz.jar
  
