--- a/build.xml
+++ b/build.xml
@@ -622,7 +622,9 @@
         bundle-ssh,bundle-plugin-sshaccregwizz,
         bundle-contacteventhandler,bundle-plugin-contactinfo,
         bundle-plugin-accountinfo,bundle-plugin-chatalerter,
-        bundle-plugin-statusupdate,bundle-jfontchooserlib,
+        bundle-plugin-statusupdate, bundle-keybindings,
+        bundle-plugin-keybindingChooser,
+        bundle-jfontchooserlib,
         bundle-updatecheckplugin,
         bundle-dict,bundle-plugin-dictaccregwizz,
         bundle-plugin-simpleaccreg,bundle-plugin-generalconfig,
@@ -1561,7 +1563,33 @@ javax.swing.event, javax.swing.border"/>
             <zipfileset src="${lib.noinst}/izpack-shortcut-link.jar" prefix=""/>
         </jar>
     </target>
-    
+
+    <!--BUNDLE-Keybindings-->
+    <target name="bundle-keybindings">
+        <jar compress="false" destfile="${bundles.dest}/keybindings.jar"
+            manifest="${src}/net/java/sip/communicator/impl/keybindings/keybindings.manifest.mf">
+            <zipfileset dir="${dest}/net/java/sip/communicator/service/keybindings"
+                prefix="net/java/sip/communicator/service/keybindings"/>
+            <zipfileset dir="${dest}/net/java/sip/communicator/impl/keybindings"
+                prefix="net/java/sip/communicator/impl/keybindings"/>
+            <zipfileset dir="${resources}/config/defaultKeybindings"
+                prefix="resources/config/defaultKeybindings"/>
+            <zipfileset src="${lib.noinst}/KeybindingUtil.jar" prefix=""/>
+        </jar>
+    </target>
+        
+    <!--BUNDLE-PLUGIN-KeybindingChooser-->
+    <target name="bundle-plugin-keybindingChooser">
+        <jar compress="false" destfile="${bundles.dest}/keybindingChooser.jar"
+            manifest="${src}/net/java/sip/communicator/plugin/keybindingchooser/keybindingChooser.manifest.mf">
+            <zipfileset dir="${dest}/net/java/sip/communicator/plugin/keybindingchooser"
+                prefix="net/java/sip/communicator/plugin/keybindingchooser"/>
+            <zipfileset dir="${resources}/images/plugin/keybindingchooser"
+                prefix="resources/images/plugin/keybindingchooser"/>
+            <zipfileset src="${lib.noinst}/KeybindingUtil.jar" prefix=""/>
+        </jar>
+    </target>
+
     <!--BUNDLE-DEFAULT-RESOURCES-->
     <target name="bundle-resources-defaultpack">
         <!-- Creates a bundle for the default resource pack."-->
@@ -1570,7 +1598,7 @@ javax.swing.event, javax.swing.border"/>
             manifest="${src}/net/java/sip/communicator/plugin/defaultresourcepack/defaultresourcepack.manifest.mf">
             <zipfileset dir="${dest}/net/java/sip/communicator/plugin/defaultresourcepack"
                     prefix="net/java/sip/communicator/plugin/defaultresourcepack"/>
-            
+
             <zipfileset dir="${resources}/colors"
                     prefix="resources/colors"/>
             <zipfileset dir="${resources}/config"
@@ -1585,7 +1613,7 @@ javax.swing.event, javax.swing.border"/>
                     prefix="resources/styles"/>
         </jar>
     </target>
-    
+
      <!--BUNDLE-RESOURCE-MANAGER-->
     <target name="bundle-resource-manager">
         <!-- Creates a bundle for the Resource Management Service Impl."-->
@@ -1607,14 +1635,14 @@ javax.swing.event, javax.swing.border"/>
             <zipfileset dir="${dest}/net/java/sip/communicator/plugin/notificationconfiguration"
                 prefix="net/java/sip/communicator/plugin/notificationconfiguration"/>
         </jar>
-	</target>
+    </target>
 
 
     <target name="bundle-jfontchooserlib">
         <!-- Creates a bundle containing the jfontchooser lib.-->
         <jar compress="false" destfile="${bundles.dest}/jfontchooserlib.jar"
             manifest="${lib.noinst}/jfontchooser.manifest.mf">
-			<zipfileset src="${lib.noinst}/jfontchooser-1.0.5.jar" prefix=""/>
+            <zipfileset src="${lib.noinst}/jfontchooser-1.0.5.jar" prefix=""/>
         </jar>
     </target>
 </project>
