Committing support for early media with 183 session progress messages. Fixing status index for eXtended aways messages in jabber
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4027 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/logging.properties
+++ b/lib/logging.properties
@@ -27,7 +27,7 @@ handlers= java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 # can be overriden by a facility specific level
 # Note that the ConsoleHandler also has a separate level
 # setting to limit messages printed to the console.
-.level= INFO
+.level= WARN
 
 ############################################################
 # Handler specific properties.
@@ -39,13 +39,13 @@ java.util.logging.FileHandler.pattern = ./log/sip-communicator%u.log
 java.util.logging.FileHandler.limit = 5000000
 java.util.logging.FileHandler.count = 1
 java.util.logging.FileHandler.formatter = net.java.sip.communicator.util.ScLogFormatter
-java.util.logging.FileHandler.level = FINEST
+java.util.logging.FileHandler.level = INFO
 
 
 
 
 # Limit the message that are printed on the console to FINEST and above (all).
-java.util.logging.ConsoleHandler.level = FINEST
+java.util.logging.ConsoleHandler.level = INFO
 java.util.logging.ConsoleHandler.formatter = net.java.sip.communicator.util.ScLogFormatter
 
 
