allow painting of texture background.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4033 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/config/defaults.properties
+++ b/resources/config/defaults.properties
@@ -28,6 +28,8 @@ dialPadHeight=150
 dialPadHorizontalGap=5
 dialPadVerticalGap=5
 
+isTextureBackground=false
+
 # branding
 textStyle=resources/styles/defaultStyle.css
 
