--- a/resources/images/images.properties
+++ b/resources/images/images.properties
@@ -182,6 +182,7 @@ TOOL_BAR_BACKGROUND=resources/images/impl/gui/common/toolbarBackground.png
 MENU_BACKGROUND=resources/images/impl/gui/common/menuBackground.png
 WINDOW_TITLE_BAR=resources/images/impl/gui/common/windowTitleBarBackground.png
 WINDOW_TITLE_BAR_BG=resources/images/impl/gui/common/windowTitleBar.png
+MAIN_WINDOW_BACKGROUND=
 
 # systray
 trayIcon=resources/images/impl/systray/systrayIcon.png
