--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -126,7 +126,7 @@ felix.auto.start.60= \
  reference:file:sc-bundles/accountinfo.jar \
  reference:file:sc-bundles/chatalerter.jar \
  reference:file:sc-bundles/shutdown.jar \
- reference:file:sc-bundles/statusupdate.jar \
+ reference:file:sc-bundles/autoaway.jar \
  reference:file:sc-bundles/keybindingChooser.jar \
  reference:file:sc-bundles/generalconfig.jar \
  reference:file:sc-bundles/dictaccregwizz.jar
